// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders event details UI correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              undefined,
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            Tell us more about your event.
          </Text>
          <View
            style={
              Object {
                "marginBottom": 35,
                "marginTop": 10,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Title
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Event title"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Write something to attract new participants
              </Text>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Description
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                multiline={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter a description for your event"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    Object {
                      "minHeight": 100,
                    },
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Let people know what your event is about
              </Text>
            </View>
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders event location ui correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    appearance="default"
    level="1"
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": 20,
        },
      ]
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
          },
          Object {
            "flexGrow": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        appearance="default"
        level="1"
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
            },
            Object {
              "flex": 1,
              "justifyContent": "space-around",
            },
          ]
        }
      >
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "marginVertical": 10,
              },
            ]
          }
        >
          <Text
            appearance="hint"
            category="h5"
            style={
              Array [
                Object {
                  "color": "#8F9BB3",
                  "fontFamily": "System",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                Object {
                  "marginBottom": 20,
                },
              ]
            }
          >
            Where is this event taking place?
          </Text>
          <View
            style={
              Object {
                "marginBottom": 35,
                "marginTop": 10,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Address
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                blurOnSubmit={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Address of event"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                appearance="default"
                category="p1"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "color": "#8F9BB3",
                        "fontFamily": "System",
                        "fontSize": 12,
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ],
                  ]
                }
              >
                Let users know where your event is taking place
              </Text>
            </View>
          </View>
          <View
            style={Object {}}
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Array [
                    Object {
                      "color": "#8F9BB3",
                      "fontFamily": "System",
                      "fontSize": 12,
                      "fontWeight": "800",
                      "marginBottom": 4,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ],
                ]
              }
            >
              Postal Code
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#F7F9FC",
                    "borderColor": "#E4E9F2",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "minHeight": 40,
                    "paddingHorizontal": 8,
                    "paddingVertical": 7,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "width": "100%",
                  },
                ]
              }
            >
              <TextInput
                allowFontScaling={true}
                appearance="default"
                autoCapitalize="none"
                autoCorrect={false}
                editable={true}
                onBlur={[Function]}
                onChange={[Function]}
                onChangeText={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onSubmitEditing={[Function]}
                placeholder="Enter postal code"
                placeholderTextColor="#8F9BB3"
                rejectResponderTermination={true}
                size="medium"
                status="basic"
                style={
                  Array [
                    Object {
                      "color": "#222B45",
                      "fontFamily": "System",
                      "fontSize": 15,
                      "fontWeight": "normal",
                      "marginHorizontal": 8,
                    },
                    Object {
                      "flexBasis": "auto",
                      "flexGrow": 1,
                      "flexShrink": 1,
                    },
                    null,
                    undefined,
                  ]
                }
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginTop": 4,
                  },
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          appearance="default"
          level="1"
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
              },
              Object {
                "flexDirection": "row",
                "marginTop": 20,
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Prev
            </Text>
          </View>
          <View
            appearance="default"
            level="1"
            style={
              Array [
                Object {
                  "backgroundColor": "#FFFFFF",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
          />
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#008EED",
                "borderColor": "#008EED",
                "borderRadius": 4,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "minHeight": 40,
                "minWidth": 40,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              appearance="default"
              category="p1"
              style={
                Array [
                  Object {
                    "color": "#222B45",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "400",
                  },
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginHorizontal": 10,
                  },
                ]
              }
            >
              Next
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
